# torchfsm

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  description.md  exp.ipynb  fft_example.ipynb  index.html  mkdocs.yml  objects.inv  release.sh  requirements.txt  setup.py  sitemap.xml  symol.ipynb  test.ipynb  todo.md
docs/: index.md  (+6 more)
exponax/: .gitignore  README.md  mkdocs.yml  pyproject.toml  residual.ipynb  setup.py  source.py
exponax/docs/: index.md  requirements.txt
exponax/docs/api/: etdrk_backbone.md
exponax/docs/background/: design_decisions.md
exponax/docs/examples/: additional_features.ipynb  creating_your_own_solvers_1d.ipynb  edtrk_from_the_ground_up.ipynb  initial_condition_showcase_1d.ipynb  learning_burgers_autoregressive_neural_operator.ipynb  performance_hints.ipynb  simple_advection_example_1d.ipynb  solver_showcase_1d.ipynb  solver_showcase_2d.ipynb  understanding_general_and_normalized_stepper.ipynb  understanding_normalized_and_difficulty.py
exponax/exponax/: __init__.py  _base_stepper.py  _forced_stepper.py  _metrics.py  _poisson.py  _repeated_stepper.py  _spectral.py  _utils.py
exponax/exponax/etdrk/: __init__.py  _base_etdrk.py  _etdrk_0.py  _etdrk_1.py  _etdrk_2.py  _etdrk_3.py  _etdrk_4.py  _utils.py
exponax/tests/: test_builtin_solvers.py  test_ic.py  test_substack_trjs.py  test_utils.py  test_validation.py  test_viz.py
exponax/validation/: qualitative_rollouts.py  validate_burgers_against_cole_hopf.ipynb  validate_conservative_kuramoto_sivashinsky.ipynb  validate_kolmogorov_spectrum.ipynb  validate_taylor_green.ipynb
(+244 files in other folders)
